from aurora to riscapta

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Chillax';
-  src: url('../src/assets/Chillax-Variable.ttf');
+  font-family: 'IBM Plex Sans';
+  src: url('../src/assets/IBMPlexSans-Regular.ttf');
 }
